# DataExtractorFromKaggleToS3

./: README.md  pyproject.toml
kaggletos3_uploader/: credentials.py  kaggletos3api.py  upload_checkpoint.json
